--- a/m.html
+++ b/m.html
@@ -166,9 +166,9 @@
         const VIDEOS_PER_BATCH = 20;
         let currentBatchStart = 0;
 
-        // URL se reelid extract karna
+        // URL se reelId extract karna
         const urlParams = new URLSearchParams(window.location.search);
-        const initialReelId = urlParams.get('reelid') || null;
+        const initialReelId = urlParams.get('reelId') || null;
 
         function setAudioPersistence() {
             localStorage.setItem('audioEnabled', 'true');
@@ -255,9 +255,9 @@
             allReels = reelsData.reels || [];
             currentReels = shuffleArray([...allReels]);
 
-            // URL mein reelid ke hisaab se initial batch set karna
+            // URL mein reelId ke hisaab se initial batch set karna
             if (initialReelId) {
-                const initialReelIndex = currentReels.findIndex(reel => reel.id === initialReelId);
+                const initialReelIndex = currentReels.findIndex(reel => reel.reelId === initialReelId);
                 if (initialReelIndex !== -1) {
                     currentBatchStart = Math.floor(initialReelIndex / VIDEOS_PER_BATCH) * VIDEOS_PER_BATCH;
                 }
@@ -376,13 +376,13 @@
             function updateMetadata(reel) {
                 fullTitle = reel.title;
                 title.innerText = reel.title;
-                const profileData = getProfileById(reel.id);
+                const profileData = getProfileById(reel.id); // id se profile fetch
                 fetchAndCache(profileData.profile).then(cachedUrl => {
                     profilePic.src = cachedUrl || "https://example.com/default-profile.jpg";
                 });
                 usernameText.innerText = profileData.username;
                 verifyBadge.style.display = profileData.verified ? "inline" : "none";
-                localStorage.setItem('lastSeenReelId', reel.id);
+                localStorage.setItem('lastSeenReelId', reel.reelId); // reelId store karna
             }
 
             function enableScrollPlayback() {
@@ -412,11 +412,11 @@
                                     });
                             }
 
-                            const reel = currentReels[index];
+                            const reel Wesbite ek reel ka reelId se fetch ho aur scroll karne par next reelId ka video play ho like (eg. myweb.github.io/Instagram/(reelId) aur scroll par next reelId load ho aur uske hisaab se video play ho jaayega ya nahi) mein changes batao taki sahi se kaam karein.reel = currentReels[index];
                             if (reel) {
                                 updateMetadata(reel);
-                                // URL mein reelid update karna
-                                window.history.pushState({}, document.title, `/Instagram/?reelid=${reel.id}`);
+                                // URL mein reelId update karna
+                                window.history.pushState({}, document.title, `/Instagram/?reelId=${reel.reelId}`);
                             }
 
                             if (index === currentBatchStart + VIDEOS_PER_BATCH - 1) {
